# bubble-sandbox

./: AGENTS.md  CLAUDE.md  README-scifi.md  README.md  config.yaml  pyproject.toml
.github/workflows/: pypi.yaml  python-lint.yaml  python-test.yaml
environments/bare/: pyproject.toml
environments/pandas-only/: pyproject.toml
skills/bwrap-sandbox/: SKILL.md
skills/bwrap-sandbox/scripts/: list_environments.sh  list_volume.sh  run.sh  run_python.sh
src/bubble_sandbox/: config.py  logging.py  models.py  sandbox.py  sessions.py  settings.py
src/bubble_sandbox/cli/: __init__.py
tests/: conftest.py
tests/functional/: test_sandbox_functional.py
tests/unit/: test_config.py  test_logging.py  test_sandbox.py  test_sessions.py  test_settings.py
