[project]
name = "bubble-sandbox"
version = "0.1.0"
description = "Python script execution with bubblewrap sandboxing"
readme = "README.md"
authors = [{ name = "Enfold Systems", email = "info@enfoldsystems.net" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-backend",
    "pydantic-settings>=2.0",
    "pyyaml",
    "typer",
]

[project.scripts]
bubble-sandbox = "bubble_sandbox.cli:the_cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
exclude = [
    "environments/*",
]

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
# skip 'tests/functional' by default
testpaths = ["tests/unit"]
addopts = "--cov=bubble_sandbox --cov=tests --cov-branch --cov-fail-under=100"
asyncio_mode = "auto"
filterwarnings = []

[tool.coverage.run]
omit = [
    "src/bubble_sandbox/cli/*.py",
]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
